--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "codicastudio/seotools",
-  "description": "A noobs worthless garbage, just learning.",
+  "description": "A random Codica Studio package.",
   "keywords": [
-      "worthless garabage by a noob."
+      ""
   ],
   "homepage": "https://github.com/codicastudio/seotools",
   "license": "MIT",
@@ -15,7 +15,7 @@
       }
   ],
   "require": {
-    "php": "^7.4",
+    "php": "^7.4 || ^8.0",
     "ext-json": "*",
     "illuminate/config": "^8.0",
     "illuminate/support": "^8.0"
